# async-mcp-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mock_mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: __init__.py  config.py  security.py
app/models/: schemas.py
app/services/: __init__.py  mcp_supervisor.py  rate_limiter.py  router.py
async_mcp_gateway/: pyproject.toml
async_mcp_gateway/app/: __init__.py  config.py  limiter.py  main.py  router.py  supervisor.py
async_mcp_gateway/tests/: __init__.py  test_gateway.py
scripts/: benchmark.py
tests/: __init__.py  conftest.py  test_gateway.py  test_supervisor.py
